Added content to index.php

--- a/templates/header.html
+++ b/templates/header.html
@@ -5,6 +5,16 @@
 	<title>%%-title-%%</title>
 </head>
 <body>
-	<h1>%%-title-%%</h1>
+	<header>
+		<nav>
+			<h1>%%-title-%%</h1>
+			<ul>
+				<li><a href="index.php?page=home">Home</a></li>
+				<li><a href="index.php?page=artists">Artists</a></li>
+				<li><a href="index.php?page=songs">Songs</a></li>
+			</ul>
+		</nav>
+	</header>
 	
+
 	
