Added template content to views

--- a/templates/aside-summary.html
+++ b/templates/aside-summary.html
@@ -1,5 +1,15 @@
 <aside>
-	<h3>Summary</h3>
-	<p>%%-total_songs_message-%%</p>
-	<p>%%-total_artists_message-%%</p>
+	<table>
+		<tr>
+			<th colspan="2">Summary</th>
+		</tr>
+		<tr>
+			<td>Total Songs</td>
+			<td>%%-total_songs_message-%%</td>
+		</tr>
+		<tr>
+			<td>Total Artists</td>
+			<td>%%-total_artists_message-%%</td>
+		</tr>
+	</table>
 </aside>
