--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,2 +1,7 @@
+		</article>
+	</section>
+	<footer>
+		<p>2017 - W1 Music - A project for <a href="http://bbk.ac.uk">Birbeck, University of London</a></p>
+	</footer>
 </body>
 </html>
