--- a/templates/content-home.html
+++ b/templates/content-home.html
@@ -1,8 +1,8 @@
-<section>
+	<section>
 	<article>
 		<header>
-			<h2>%%-welcome_message_title-%%</h2>
+			<h2>%%-page_title-%%</h2>
 		</header>
 		<p>%%-welcome_message_content-%%</p>
 	</article>
-</section>
+	</section>
