Added DB ojbect and minor changes to home.php

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,7 +1,7 @@
 		</article>
 	</section>
 	<footer>
-		<p>2017 - W1 Music - A project for <a href="http://bbk.ac.uk">Birbeck, University of London</a></p>
+		<p>2017 - W1 Music - A project for Birbeck, University of London</p>
 	</footer>
 </body>
 </html>
