--- a/templates/content-home.html
+++ b/templates/content-home.html
@@ -1,7 +1,7 @@
 	<section>
 	<article>
 		<header>
-			<h2>%%-page_title-%%</h2>
+			<h2>%%-home_title-%%</h2>
 		</header>
 		<p>%%-welcome_message_content-%%</p>
 	</article>
