Added DB connection and queries on summary.php

--- a/templates/aside-summary.html
+++ b/templates/aside-summary.html
@@ -5,11 +5,11 @@
 		</tr>
 		<tr>
 			<td>Total Songs</td>
-			<td>%%-total_songs_message-%%</td>
+			<td>%%-total_songs_-%%</td>
 		</tr>
 		<tr>
 			<td>Total Artists</td>
-			<td>%%-total_artists_message-%%</td>
+			<td>%%-total_artists-%%</td>
 		</tr>
 	</table>
 </aside>
