Added DB connection and queries on summary.php

--- a/templates/aside-summary.html
+++ b/templates/aside-summary.html
@@ -5,10 +5,10 @@
 		</tr>
 		<tr>
 			<td>Total Songs</td>
-			<td>%%-total_songs_-%%</td>
+			<td>%%-total_songs-%%</td>
 		</tr>
 		<tr>
-			<td>Total Artists</td>
+			<td>Active Artists</td>
 			<td>%%-total_artists-%%</td>
 		</tr>
 	</table>
