--- a/styles/style.css
+++ b/styles/style.css
@@ -96,7 +96,7 @@ footer{
 	right: 0;
  	bottom: 0;
  	left: 0;
- 	padding: 1em;
+ 	padding: 1rem;
  	font-size: 0.85em;
  	background-color: #eee;
  	text-align: center;
