--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,5 +1,5 @@
 	<footer>
-		<p>2017 - W1 Music - A project for Birbeck, University of London</p>
+		<p>2017 - W1 Music - By Oscar Garcia-Saldarriaga</p>
 	</footer>
 </body>
 </html>
